------------
-- 2.3.1 --
------------

* Backend:
	* Backend now checks for kpackagekit as packaging tool, too.
	  Note: This requires that packagekit ist installed on the hosting
	  system - otherwise the dbus queries to packagekitd will fail.
	  FIXME: Running packagekitd on the host will give wrong results!!!
	  --> We need to change the strategy here! Upstart has similar issues
	  --> need to start "private" dbus system bus instance?!?
	* Added error checking for arguments to uck-remaster-mount.
	* improved error checking and handling for union mounts: either all or
	  nothing now; imply -m if tell-tale directory (-cache) is found;
	  made reentrant for use by uck-flow; pointless check for
	  uck-remaster-mount removed; fallback to copy if union mount not
	  possible; do not remove target when using mounts.
* Package:
	* gfxboot-dev dep added for maverick

------------
-- 2.3.0 --
------------

* GUI:
	* GUI now uses kdialog, zenity, dialog or builtin (in that order) if
	  available. (#577197)
	* Updated uck-gui to accept parameters for loopback/unionfs mounting
	  and added the possibility to specify a directory different from ~/tmp
	  for remaster-dir. Change is backward compatible to uck-2.2.0.
	  (Question/Answer 110374)

* Backend:
	* Sequence of actions in uck-remaster changed so that initrd is
	  unpacked/customized/packed after the changes to the root file system
	  and the ISO have been done. This avoids problems when customize_iso
	  installs a new Live-CD kernel and initrd (which would previously be
	  overwritten by the contents of the old initrd, causing a mismatch
	  between the kernel (new) and the initrd (old)).
	* Extended remaster-live-cd.sh by two procedures to perform 
	  loopback+union mounts. (#72727)
	* Added a -m option to uck-gui, uck-remaster, uck-remaster-unpack-iso
	  and uck-remaster-unpack-rootfs that uses a combination of loopback
	  and unionfs mounts instead of copying. This is an experimental